# face-app

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/libs/: payfacelibrary-debug.aar
app/src/androidTest/java/br/com/face/: ExampleInstrumentedTest.java  FaceToolTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/br/com/face/: CaptureFrame.java  DataAnalyse.java  FaceCameraFragment.java  FaceCameraPresenter.java  FaceEncoding.java  FaceTool.java  FaceToolJNI.java  IFaceCamera.java  ImageUtil.java  MainActivity.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/br/com/face/: ExampleUnitTest.java
facelibrary/: build.gradle
facelibrary/cppLibs/dlib/: config.h
facelibrary/cppLibs/openblas/arm64-v8a/lib/cmake/openblas/: OpenBLASConfig.cmake
facelibrary/cppLibs/openblas/arm64-v8a/lib/pkgconfig/: openblas.pc
facelibrary/cppLibs/openblas/armeabi-v7a/lib/cmake/openblas/: OpenBLASConfig.cmake
facelibrary/cppLibs/openblas/armeabi-v7a/lib/pkgconfig/: openblas.pc
facelibrary/cppLibs/openblas/include/: openblas_config.h
facelibrary/cppLibs/openblas/x86_64/lib/cmake/openblas/: OpenBLASConfig.cmake
facelibrary/cppLibs/openblas/x86_64/lib/pkgconfig/: openblas.pc
facelibrary/opencv411/: build.gradle
facelibrary/opencv411/java/src/org/opencv/core/: Core.java
facelibrary/opencv411/java/src/org/opencv/imgproc/: Imgproc.java
facelibrary/opencv411/java/src/org/opencv/optflow/: DenseRLOFOpticalFlow.java  DualTVL1OpticalFlow.java  GPCDetails.java  GPCPatchDescriptor.java  GPCPatchSample.java  GPCTrainingSamples.java  GPCTree.java  Optflow.java  OpticalFlowPCAFlow.java  PCAPrior.java  RLOFOpticalFlowParameter.java  SparseRLOFOpticalFlow.java
facelibrary/opencv411/java/src/org/opencv/photo/: Photo.java
facelibrary/opencv411/java/src/org/opencv/text/: Text.java
facelibrary/opencv411/native/jni/: OpenCV-arm64-v8a.mk  OpenCV-armeabi-v7a.mk  OpenCV.mk
facelibrary/opencv411/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
facelibrary/opencv411/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
facelibrary/opencv411/native/jni/include/opencv2/: opencv_modules.hpp  photo.hpp
facelibrary/src/androidTest/java/br/com/face/facelibrary/: ExampleInstrumentedTest.java
facelibrary/src/main/: AndroidManifest.xml
facelibrary/src/main/cpp/: CMakeLists.txt  Converter.cpp  Converter.h  IFaceDescriptorTool.h  IFaceDetectorTool.h  ILandmarkTool.h  facetoolbridge.cpp
facelibrary/src/main/cpp/dlibtool/: DlibFaceDescriptorTool.cpp  DlibFaceDescriptorTool.h  DlibFaceDetector.cpp  DlibFaceDetector.h  DlibLandmarkTool.cpp  DlibLandmarkTool.h
facelibrary/src/main/cpp/opencvtool/: OpencvFaceDetector.cpp  OpencvFaceDetector.h  OpencvLandmarkTool.cpp  OpencvLandmarkTool.h  OpenvcConverter.cpp  OpenvcConverter.h
facelibrary/src/main/java/br/com/face/facelibrary/: AutoFitTextureView.java  (+3 more)
facelibrary/src/main/res/layout/: fragment_camera2_basic.xml
facelibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
